# Sticky

./: dev-status.md  デザインシステム初版.md  マスタープラン.md  画面ワイヤー仕様.md  疎通確認結果.md  要件定義.md
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  Management.tsx  MemoWindow.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/constants/: sticky.ts
app/src/domain/: sessionActions.ts  sessionHelpers.ts
app/src/services/: stickyDb.ts
app/src/types/: sticky.ts
plans/: clickthrough-phase-c1b-plan.md  clickthrough-redesign-plan.md  phase-3-1c-slot-and-warning.md  phase-3-2-session-selection.md  phase-3-session-operations.md  phase-4-persistence-and-autosave.md  phase-5-management-window-mvp.md  refactor-governance-and-execution-plan.md  refactor-phase-r0-verification.md  refactor-phase-r1-verification.md  refactor-phase-r2-verification.md  refactor-phase-r3-front-verification.md
